# EllipseFit

./: .gitignore  .runsettings  CMakeLists.txt  CodeCoverage.runsettings  EllipseFit.sln  EllipseFitDemo.ino  README.md  keywords.txt  library.properties  post-build.cmd  vcpkg-configuration.json  vcpkg.json
examples/EllipseFitDemo/: EllipseFitDemo.ino
lib/: CMakeLists.txt  tools.cmake
memTest/: memTest.cpp  memTest.vcxproj  memTest.vcxproj.filters
src/: Angle.cpp  Angle.h  CMakeLists.txt  CartesianEllipse.cpp  CartesianEllipse.h  Coordinate.cpp  Coordinate.h  EllipseFit.cpp  EllipseFit.h  Fit.cpp  Fit.h  MathUtils.cpp  MathUtils.h  QuadraticEllipse.cpp  QuadraticEllipse.h  src.vcxproj  src.vcxproj.filters
test/: AngleTest.cpp  CMakeLists.txt  CartesianEllipseDriver.cpp  CartesianEllipseDriver.h  CartesianEllipseTest.cpp  CoordinateTest.cpp  EllipseFitDemo.cpp  EllipseFitTest.cpp  EllipseFitTest.h  FitTest.cpp  FitTest.h  MathUtilsTest.cpp  MemTest.cpp  QuadraticEllipseTest.cpp  TestHelper.cpp  TestHelper.h  test.vcxproj
